# pacioli

./: .gitignore  .gitleaks.toml  COMPETITORS.md  DESIGN.md  README.md  SCOPED-TOKEN-PROOF.md  TWO-DOORS.md  glama.json  lhm.plugin.json  ruff.toml  server.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release-pypi.yml  scorecard.yml
assets/plates/: ATTRIBUTION.md
broker/: CHANGELOG.md  README.md  SPEC.md  license.txt  pyproject.toml
broker/pacioli/: __init__.py  a2a.py  amend.py  anchor.py  cascade.py  cli.py  clock.py  close.py  consent.py  doctor.py  erpnext.py  plan.py  prove.py  reconcile.py  reconciliation.py  registry.py  response.py  runtime.py  server.py  spine.py  store.py  tools.py  webguard.py  workflow.py
broker/pacioli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
broker/pacioli/tests/: _torn_write_crash_worker.py  test_a2a.py  test_a2a_signing.py  test_amend.py  test_anchor.py  test_attest_cli.py  test_cascade.py  test_clock.py  test_close.py  test_close_advance.py  test_close_clock.py  test_close_envelope.py  test_consent.py  test_doctor.py  test_erpnext.py  test_erpnext_reconciliation_reads.py  test_plan.py  test_prove.py  test_reconcile.py  test_reconciliation.py  test_registry.py  test_response.py  test_runtime.py  test_seal_cli.py  test_seal_gate.py  test_server.py  test_server_http.py  test_spine.py  test_store.py  test_store_close_record.py  test_store_seal.py  test_store_torn_write.py  test_tool_surface.py  test_tools.py  test_version.py  test_via.py  test_webguard.py  test_workflow.py
broker/scripts/: gen_lobehub_manifest.py
deploy/: DEPLOY.md  deploy.env.example  dump-live-scope.sh  govern.sh  instruments.sh  perimeter.sh  provision.sh  restore.sh  scope-doctypes.list  scope-graph-doctypes.list  scope-methods.list  seat-read-doctypes.list  seat-transitive-grants.list  upgrade.sh
deploy/frappe_docker/: Containerfile  README.md  apps.json.example
docs/research/: 2026-07-13-two-doors-delta-sweep.md
docs/specs/: 2026-07-03-cascade-cancel-design.md
guard/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
guard/pacioli_guard/: enforce.py  hooks.py  patches.txt  scope.py
guard/pacioli_guard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
guard/pacioli_guard/patches/v0_6_0/: warn_unresolved_method_grants.py
guard/pacioli_guard/scoping/doctype/api_key_scope/: api_key_scope.json  api_key_scope.py
guard/pacioli_guard/scoping/doctype/api_key_scope_doctype/: api_key_scope_doctype.json  api_key_scope_doctype.py
guard/pacioli_guard/scoping/doctype/api_key_scope_method/: api_key_scope_method.json  api_key_scope_method.py
guard/pacioli_guard/tests/: test_enforce.py  test_patches.py  test_scope.py
scripts/: install_smoke.sh  release.sh  release_leak_audit.py  version_tools.py
scripts/tests/: test_version_tools.py
site/: index.html
