[build-system]
requires = ["setuptools>=77.0"]   # SPDX license expression (PEP 639)
build-backend = "setuptools.build_meta"

[project]
name = "pacioli"
version = "0.30.2"
description = "Governed agent broker for ERPNext (MCP + A2A doors, one spine) — no debit without a credit: PLAN, CONSENT, PROVE, UNDO over the books, on the Pacioli Guard credential floor"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "John Broadway" }]
keywords = ["mcp", "erpnext", "frappe", "ai-agents", "governance", "audit", "accounting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
# The agent-facing MCP stdio server (glue). The pure cores + human CLI are stdlib-only.
server = ["mcp>=1.0"]
# The A2A door (Agent2Agent JSON-RPC + agent card) — the first non-MCP door
# (docs/plans/2026-07-16-a2a-door.md). Lazily imported; nothing outside `pacioli serve --a2a`
# needs it. `a2a-sdk[signing]` (pulls PyJWT) + `cryptography` add opt-in ES256 agent-card
# signing (docs/plans/2026-07-17-a2a-card-signing.md); inert unless a signing key is configured.
a2a = ["a2a-sdk[signing]>=1.1", "uvicorn>=0.30", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/john-broadway/pacioli"
Source = "https://github.com/john-broadway/pacioli"

[project.scripts]
pacioli = "pacioli.cli:main"

[tool.setuptools.packages.find]
include = ["pacioli*"]
exclude = ["pacioli.tests*"]   # tests are for the repo, not the wheel
